# WebAnalyse

./: hatch.toml  pyproject.toml
src/plot_page/: __init__.py  app.py
src/plot_page/control/: base_functions.py  data_operations.py  generate_data.py  gui_update.py  plot_2d.py  plot_functions.py  table_operations.py
src/plot_page/control/data_analyse/: notlinear_function.py
src/plot_page/control/data_operation/: __init__.py  extract_information.py  management_data.py  modify_data.py
src/plot_page/control/visualisation/: __init__.py  gui_control.py  plot_function.py
src/plot_page/data/: __init__.py  global_variables.py  json_data.py  panda_data.py
src/plot_page/view/: layout.py
src/plot_page/view/components/: __init__.py  app.py  default_component.py
src/plot_page/view/pages/: __init__.py  data_analyse.py  home.py  plot_2d.py
src/plot_page/view/pages/data_analyse/: __init__.py  data_correlation.py  data_notlinear_regression.py
src/plot_page/view/pages/data_subpages/: data_correlation.py  data_notlinear_regression.py
src/plot_page/view/pages/upload/: __init__.py
src/plot_page/view/pages/visualization/: __init__.py  plot2d.py
