[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="plot_page"
dynamic = ["version"]
description = "Hatch plugin for Docker containers"
requires-python = ">=3.7"
license = "MIT"
keywords = [
  "container",
  "docker",
  "environment",
  "hatch",
  "plugin",
]
authors = [
  { name = "Ofek Lev", email = "oss@ofek.dev" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "hatch>=1.2.0",
  "dash==2.17.1",
  "dash-bootstrap-components==1.6.0",
  "ruff==0.5.4",
]
[project.entry-points.hatch]
containers = "plot_page.app"

[tool.hatch.version]
path = "src/plot_page/__about__.py"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 150